--- a/UI/dreamy.ui
+++ b/UI/dreamy.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
-    <height>300</height>
+    <width>500</width>
+    <height>500</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -93,7 +93,7 @@
       </spacer>
      </item>
      <item>
-      <widget class="QPushButton" name="menu">
+      <widget class="QPushButton" name="options">
        <property name="toolTip">
         <string>Floating Menu</string>
        </property>
