--- a/UI/dreamy.ui
+++ b/UI/dreamy.ui
@@ -43,14 +43,25 @@
       </spacer>
      </item>
      <item>
-      <widget class="QLabel" name="time">
-       <property name="text">
-        <string>Dreamy</string>
-       </property>
-       <property name="alignment">
-        <set>Qt::AlignCenter</set>
-       </property>
-      </widget>
+      <layout class="QVBoxLayout" name="verticalLayout_2">
+       <item>
+        <widget class="QLabel" name="time">
+         <property name="text">
+          <string>Dreamy</string>
+         </property>
+         <property name="alignment">
+          <set>Qt::AlignCenter</set>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QLabel" name="date">
+         <property name="alignment">
+          <set>Qt::AlignCenter</set>
+         </property>
+        </widget>
+       </item>
+      </layout>
      </item>
      <item>
       <spacer name="horizontalSpacer_2">
