--- a/UI/dreamy.ui
+++ b/UI/dreamy.ui
@@ -13,6 +13,10 @@
   <property name="windowTitle">
    <string>Dreamy</string>
   </property>
+  <property name="windowIcon">
+   <iconset resource="../Icons/icons.qrc">
+    <normaloff>:/dreamy.png</normaloff>:/dreamy.png</iconset>
+  </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
     <spacer name="verticalSpacer">
@@ -120,6 +124,8 @@
    </item>
   </layout>
  </widget>
- <resources/>
+ <resources>
+  <include location="../Icons/icons.qrc"/>
+ </resources>
  <connections/>
 </ui>
