--- a/UI/dreamy_options.ui
+++ b/UI/dreamy_options.ui
@@ -13,6 +13,10 @@
   <property name="windowTitle">
    <string>Dreamy: Options</string>
   </property>
+  <property name="windowIcon">
+   <iconset resource="../Icons/icons.qrc">
+    <normaloff>:/dreamy.png</normaloff>:/dreamy.png</iconset>
+  </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
     <widget class="QScrollArea" name="scrollArea">
@@ -200,6 +204,8 @@
   <tabstop>show_date</tabstop>
   <tabstop>show_seconds</tabstop>
  </tabstops>
- <resources/>
+ <resources>
+  <include location="../Icons/icons.qrc"/>
+ </resources>
  <connections/>
 </ui>
