--- a/UI/dreamy_options.ui
+++ b/UI/dreamy_options.ui
@@ -42,8 +42,11 @@
        </item>
        <item row="0" column="1">
         <widget class="QPushButton" name="background_color">
+         <property name="styleSheet">
+          <string notr="true">QPushButton {background-color: #000000;}</string>
+         </property>
          <property name="text">
-          <string>Select</string>
+          <string>#000000</string>
          </property>
         </widget>
        </item>
@@ -55,11 +58,7 @@
         </widget>
        </item>
        <item row="1" column="1">
-        <widget class="QPushButton" name="font">
-         <property name="text">
-          <string>Select</string>
-         </property>
-        </widget>
+        <widget class="QPushButton" name="font"/>
        </item>
        <item row="2" column="0">
         <widget class="QLabel" name="label_2">
@@ -70,8 +69,11 @@
        </item>
        <item row="2" column="1">
         <widget class="QPushButton" name="font_color">
+         <property name="styleSheet">
+          <string notr="true">QPushButton {background-color: rgb(255, 170, 0);}</string>
+         </property>
          <property name="text">
-          <string>Select</string>
+          <string>#ffaa00</string>
          </property>
         </widget>
        </item>
@@ -153,7 +155,7 @@
          <item>
           <widget class="QSpinBox" name="font_size">
            <property name="minimum">
-            <number>10</number>
+            <number>100</number>
            </property>
            <property name="maximum">
             <number>200</number>
