--- a/UI/dreamy.ui
+++ b/UI/dreamy.ui
@@ -124,6 +124,13 @@
         </property>
        </widget>
       </item>
+      <item>
+       <widget class="QPushButton" name="quit">
+        <property name="text">
+         <string/>
+        </property>
+       </widget>
+      </item>
      </layout>
     </item>
    </layout>
