--- a/UI/dreamy_options.ui
+++ b/UI/dreamy_options.ui
@@ -44,8 +44,8 @@
        <rect>
         <x>0</x>
         <y>0</y>
-        <width>384</width>
-        <height>320</height>
+        <width>363</width>
+        <height>314</height>
        </rect>
       </property>
       <layout class="QFormLayout" name="formLayout">
@@ -86,10 +86,10 @@
        <item row="2" column="1">
         <widget class="QPushButton" name="font_color">
          <property name="styleSheet">
-          <string notr="true">QPushButton {background-color: rgb(255, 170, 0);}</string>
+          <string notr="true">QPushButton {background-color: #55aaff;}</string>
          </property>
          <property name="text">
-          <string>#ffaa00</string>
+          <string>#55aaff</string>
          </property>
         </widget>
        </item>
@@ -143,6 +143,9 @@
          <property name="text">
           <string/>
          </property>
+         <property name="checked">
+          <bool>true</bool>
+         </property>
         </widget>
        </item>
        <item row="7" column="0">
@@ -156,6 +159,9 @@
         <widget class="QCheckBox" name="show_seconds">
          <property name="text">
           <string/>
+         </property>
+         <property name="checked">
+          <bool>true</bool>
          </property>
         </widget>
        </item>
@@ -204,6 +210,9 @@
         <widget class="QCheckBox" name="show_date">
          <property name="text">
           <string/>
+         </property>
+         <property name="checked">
+          <bool>true</bool>
          </property>
         </widget>
        </item>
