--- a/UI/dreamy.ui
+++ b/UI/dreamy.ui
@@ -49,6 +49,9 @@
       </item>
       <item>
        <layout class="QVBoxLayout" name="clock_layout">
+        <property name="spacing">
+         <number>10</number>
+        </property>
         <item>
          <widget class="dreamy_label" name="time">
           <property name="textFormat">
